--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 static/vokoscreen_captures/How_to_Use_ChatGPT_to_Create_a_Django_Application.mp4
 static/vokoscreen_captures/vokoscreenNG-2025-01-22_09-26-00.mkv
+static/vokoscreen_captures/2025-01-23_03-55-16video2.mp4
+static/vokoscreen_captures/2025-01-23_04-31-02video2.mp4
+static/vokoscreen_captures/Cropping_and_Trimming_a_Captured_Video_with_Django.mp4
+static/vokoscreen_captures/cropped_1366x768_with_frame.mp4
+static/vokoscreen_captures/Live_Stream_Local_Experiment.mp4
+static/vokoscreen_captures/2025-01-23_08-08-24video2.mp4
+static/vokoscreen_captures/cropped_1366x768.mp4
+static/vokoscreen_captures/final_output3b.mp4
+static/vokoscreen_captures/store/Cropping_and_Trimming_a_Captured_Video_with_Django.mp4
+static/vokoscreen_captures/store/cropped_1366x768_with_frame.mp4
+static/vokoscreen_captures/store/How_to_Use_ChatGPT_to_Create_a_Django_Application.mp4
+static/vokoscreen_captures/store/2025-01-23_04-31-02video2.mp4
+static/vokoscreen_captures/store/cropped_1366x768.mp4
