added ffmpeg screencapture

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ static/vokoscreen_captures/store/cropped_1366x768_with_frame.mp4
 static/vokoscreen_captures/store/How_to_Use_ChatGPT_to_Create_a_Django_Application.mp4
 static/vokoscreen_captures/store/2025-01-23_04-31-02video2.mp4
 static/vokoscreen_captures/store/cropped_1366x768.mp4
+static/project/Kden_Brain.mp4
+static/project/screamer.mp4
+static/vokoscreen_captures/STORY1.mp4
+static/vokoscreen_captures/STORY1a.mp4
+static/vokoscreen_captures/The_Story_of_AI.mp4
+static/vokoscreen_captures/2025-01-26_18-26-27video2.mp4
+static/vokoscreen_captures/needs_recoded_1.mp4
+static/vokoscreen_captures/The_Story_of_AI2.mp4
